# Awesome-Social-media-LLM-based-Analysis

./: .gitignore  1.json  LICENSE  MULTI_CATEGORY_GUI_COMPLETE.md  PACKAGING.md  PROJECT_README.md  README.md  README_冲突文件_xiajie_20260108164949.md  SurveyPaperSubmitGUI.spec  contributor_manual_chs.md  debug_validation.py  my_submit - 副本.json  my_submit - 副本.xlsx  my_submit - 副本_冲突文件_xiajie_20260108165826.xlsx  my_submit - 副本_冲突文件_xiajie_20260108170416.xlsx  my_submit_1.xlsx  my_submit_冲突文件_xiajie_20260108143743.xlsx  my_submit_冲突文件_xiajie_20260108144520.xlsx  paper_database.xlsx  pyproject.toml  submit.py  submit_cli.py  submit_template - test.json  submit_template - test.xlsx  submit_template.json  submit_template.xlsx  submit_template12.xlsx  test.json  test123.json  test2.xlsx  test2323.json  test3.xlsx  test_category_edge_cases.py  test_category_extraction.py  test_category_format_validation.py  test_real_world_example.py  testdatabase.xlsx#paper_database.xlsx  tmp_run_tests.py  tmp_smoke_convert.py  ~$my_submit - 副本.xlsx
backups/: my_submit__backup_20260113_231607.xlsx  paper_database__backup_20260113_231607.xlsx  paper_database__backup_20260129_091425.xlsx  paper_database__backup_20260129_091555.xlsx  paper_database__backup_20260129_093431.xlsx  paper_database__backup_20260129_094729.xlsx  paper_database__backup_20260129_100944.xlsx  paper_database__backup_20260129_185301.xlsx  paper_database__backup_20260129_185504.xlsx  paper_database__backup_20260129_185805.xlsx  paper_database__backup_20260129_185821.xlsx  paper_database_backup_20251210_124705.xlsx  (+96 more)
(+111 files in other folders)
