[project]
name = "awesome-social-media-llm-based-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

# 这里只放 GitHub Action 运行脚本必须的包，仓库中使用参数只安装这些
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

# 这里放开发、打包工具，或者本地调试用的包
[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.18.0",
]