[project]
name = "awesome-social-media-llm-based-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

# 这里只放 GitHub Action 运行脚本必须的包
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pypdf>=6.6.2",

]

# 这里放开发、打包工具，或者本地调试用的包
[dependency-groups]
dev = [
    "requests>=2.32.5",
    "pyinstaller>=6.18.0",
    "tkinterdnd2>=0.4.3",
]

# 全部安装命令：
# uv install --all-groups
# uv sync --all-groups